crates/ty_python_semantic/resources/mdtest/snapshots/attribute_assignment…_-_Attribute_assignment_-_`ClassVar`s_(8d7cca27987b099d).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: attribute_assignment.md - Attribute assignment - `ClassVar`s
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/attribute_assignment.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import ClassVar
 2 | 
 3 | class C:
 4 |     attr: ClassVar[int] = 0
 5 | 
 6 | C.attr = 1  # fine
 7 | C.attr = "wrong"  # error: [invalid-assignment]
 8 | 
 9 | instance = C()
10 | instance.attr = 1  # error: [invalid-attribute-access]
```

# Diagnostics

```
error[invalid-assignment]: Object of type `Literal["wrong"]` is not assignable to attribute `attr` of type `int`
 --> src/mdtest_snippet.py:7:1
  |
6 | C.attr = 1  # fine
7 | C.attr = "wrong"  # error: [invalid-assignment]
  | ^^^^^^
8 |
9 | instance = C()
  |

```

```
error[invalid-attribute-access]: Cannot assign to ClassVar `attr` from an instance of type `C`
  --> src/mdtest_snippet.py:10:1
   |
 9 | instance = C()
10 | instance.attr = 1  # error: [invalid-attribute-access]
   | ^^^^^^^^^^^^^
   |

```
